<resources>
    <string name="app_name">HackathonProject</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">Enter your name</string>
    <string name="user_email">Enter your email</string>
    <string name="user_phone">Enter your phone</string>
    <string name="submit">Submit</string>
    <string name="tag">Enter your profession</string>
</resources>
